--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <table cellspacing="20">
         <tr>
-            <td><img src="images/IMG_5266.JPG" width="150" height="267" alt="JC profile photo"></td>
+            <td><img src="images/IMG_8824.JPG" width="150" height="267" alt="JC profile photo"></td>
             <td><h1>Julian Chimal</h1>
                 <p><em>DBA and <strong><a href="https://www.customs.gov.bz/"> Web Developer></a></strong>.</em></p>
                 <p>I am a Web Developer, Database Administrator. I ❤️ coffee and wine and I brew my own beer</p>
@@ -17,7 +17,7 @@
     <hr>
     <h3>Education</h3>
     <ul>
-        <li>CCC Highschool</li>
+        <li>CCC High School</li>
         <li>Corozal Junior College</li>
         <li>Programming in Pascal</li>
         <li>Oracle Administration</li>
